# awg-pinger

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api-data/: clients.example.json  telegram.example.json
api_side/: clients.py  main.py  telegram.py
awg_client_side/: checker.py  main.py
data/: example.conf  settings.example.json
shared/: schemas.py  security.py  settings.py
tests/: test_api_side.py  test_settings.py
